syntax = "proto3";

package service;

import "google/api/annotations.proto";
import "github.com/lyft/protoc-gen-validate/validate/validate.proto";
import "protoc-gen-swagger/options/annotations.proto";

option go_package = "catalog/pkg/pb;pb";

message VersionResponse {
  string version = 1;
}

message CreateBrandRequest {
  BrandDetails payload = 1;
}

message BrandDetails {
  string name = 1;
  string description = 2;
  string keywords = 3;
  int32 status = 4;
}

message CreateBrandResponse {
  BrandDetails brand = 1;
  string external_id = 2;
}

message GetBrandByIdResponse {
  BrandDetails brand = 1;
  string external_id = 2;
}

message GetBrandByIdRequest {
  string external_id = 1;
}

message UpdateBrandRequest {
  BrandDetails payload = 1;
  string external_id = 2;
}

message UpdateBrandResponse {
  BrandDetails brand = 1;
  string external_id = 2;
}

message DeleteBrandRequest {
  string external_id = 1;
}

message DeleteBrandResponse {

}

message MultiGetBrandsRequest {
  repeated string external_ids = 1;
}

message MultiGetBrandsResponse {
  repeated GetBrandByIdResponse result = 1;
}

service Catalog {
  rpc CreateBrand (CreateBrandRequest) returns (CreateBrandResponse) {
    option (google.api.http) = {
      post: "/brands"
      body: "payload"
    };
  }

  rpc GetBrandById (GetBrandByIdRequest) returns (GetBrandByIdResponse){
    option (google.api.http) = {
      get: "/brands/{external_id}"
    };
  }

  rpc UpdateBrand (UpdateBrandRequest) returns (UpdateBrandResponse){
    option (google.api.http) = {
      patch: "/brands/{external_id}"
      body: "payload"
    };
  }

  rpc DeleteBrand (DeleteBrandRequest) returns (DeleteBrandResponse){
    option (google.api.http) = {
      delete: "/brands/{external_id}"
    };
  }

  rpc MultiGetBrands (MultiGetBrandsRequest) returns (MultiGetBrandsResponse){
    option (google.api.http) = {
      put: "/brands/multi-get"
      body: "*"
    };
  }
}
